--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^7.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vuepress": "^1.9.9"
   }
 }
